[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pandas = "^2.2.2"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
networkx = "^3.3"
seaborn = "^0.13.2"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
